--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ dj-database-url>=2.0
 gunicorn>=21.2
 psycopg2-binary>=2.9
 whitenoise>=6.5
-python-decouple>=3.8 
+python-decouple>=3.8
+django-widget-tweaks>=1.4.12 
