--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ gunicorn>=21.2
 psycopg2-binary>=2.9
 whitenoise>=6.5
 python-decouple>=3.8
-django-widget-tweaks>=1.4.12 
+django-widget-tweaks>=1.4.12
+djangorestframework-simplejwt>=5.3.0 
